Adequação da lista com o banco de dados do computador da UP

--- a/CadastroCorrentista/CadastroCorrentista/Web.config
+++ b/CadastroCorrentista/CadastroCorrentista/Web.config
@@ -57,9 +57,11 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BaseDadosBancariosContainer" connectionString="metadata=res://*/Models.BaseDadosBancarios.csdl|res://*/Models.BaseDadosBancarios.ssdl|res://*/Models.BaseDadosBancarios.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=CadastroBancarioDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
     <add name="CadastroBancarioDBConnectionString" connectionString="Data Source=(localdb)\mssqllocaldb;Initial Catalog=CadastroBancarioDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="BaseDadosBancariosContainer" connectionString="metadata=res://*/Models.BaseDadosBancarios.csdl|res://*/Models.BaseDadosBancarios.ssdl|res://*/Models.BaseDadosBancarios.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=CadastroCorrentistaDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="CadastroCorrentistaDBConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=CadastroCorrentistaDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
