--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -197,13 +197,42 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LiteraturasController.cs" />
+    <Compile Include="Controllers\LivrosController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706272314461_InitialCreate.cs" />
+    <Compile Include="Migrations\201706272314461_InitialCreate.Designer.cs">
+      <DependentUpon>201706272314461_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706280232443_Inicial.cs" />
+    <Compile Include="Migrations\201706280232443_Inicial.Designer.cs">
+      <DependentUpon>201706280232443_Inicial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706280303558_Inicial1.cs" />
+    <Compile Include="Migrations\201706280303558_Inicial1.Designer.cs">
+      <DependentUpon>201706280303558_Inicial1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706280314509_Inicial2.cs" />
+    <Compile Include="Migrations\201706280314509_Inicial2.Designer.cs">
+      <DependentUpon>201706280314509_Inicial2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706280316207_Inicial3.cs" />
+    <Compile Include="Migrations\201706280316207_Inicial3.Designer.cs">
+      <DependentUpon>201706280316207_Inicial3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706280332187_Inicial4.cs" />
+    <Compile Include="Migrations\201706280332187_Inicial4.Designer.cs">
+      <DependentUpon>201706280332187_Inicial4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Literatura.cs" />
+    <Compile Include="Models\Livro.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -268,6 +297,19 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Role\Index.cshtml" />
     <Content Include="Views\Role\Create.cshtml" />
+    <Content Include="Views\Role\Edit.cshtml" />
+    <Content Include="Views\Role\Delete.cshtml" />
+    <Content Include="Views\Literaturas\Create.cshtml" />
+    <Content Include="Views\Literaturas\Delete.cshtml" />
+    <Content Include="Views\Literaturas\Details.cshtml" />
+    <Content Include="Views\Literaturas\Edit.cshtml" />
+    <Content Include="Views\Literaturas\Index.cshtml" />
+    <Content Include="Views\Livros\Create.cshtml" />
+    <Content Include="Views\Livros\Delete.cshtml" />
+    <Content Include="Views\Livros\Details.cshtml" />
+    <Content Include="Views\Livros\Edit.cshtml" />
+    <Content Include="Views\Livros\Index.cshtml" />
+    <Content Include="Views\Livros\ListByGenero.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -279,6 +321,26 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201706272314461_InitialCreate.resx">
+      <DependentUpon>201706272314461_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706280232443_Inicial.resx">
+      <DependentUpon>201706280232443_Inicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706280303558_Inicial1.resx">
+      <DependentUpon>201706280303558_Inicial1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706280314509_Inicial2.resx">
+      <DependentUpon>201706280314509_Inicial2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706280316207_Inicial3.resx">
+      <DependentUpon>201706280316207_Inicial3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706280332187_Inicial4.resx">
+      <DependentUpon>201706280332187_Inicial4.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
